# lewis-structure-visualizer

./: .gitignore  .gitmodules  .n.swp  Cargo.toml  README.md
data/: .~lock.data.csv#
display/: .clang-format  CMakeLists.txt  Cargo.toml  build.rs  imgui.ini
display/cpp/: glad.h  main.cpp
display/include/: display.hpp  molecule.hpp
display/res/orbitals/: 1s.gltf  p.gltf  s.gltf
display/res/shaders/: blur_ssao.wgsl  composite.wgsl  shader.wgsl  ssao.wgsl
display/src/: camera.rs  display.cpp  glad.c  lib.rs  main.cpp  main.rs  model.rs  molecule.cpp  resource.rs  shader.wgsl  test_molecule.cpp  texture.rs
display2/: CMakeLists.txt  test.sh
display2/docs/: orbital_orientation.md
display2/include/: config.hpp  display.hpp  model.hpp  molecule.hpp
display2/res/orbitals/: p.gltf  sp.gltf
display2/res/shaders/: shader.wgsl
display2/src/: display.cpp  main.cpp  molecule.cpp  shader.wgsl  test.cpp  test_molecule.cpp
rust/: Cargo.toml
rust/src/: main.rs
solver/: Cargo.toml
solver/src/: format.rs  main.rs  solve.rs
src/: display.rs  main.rs
